Cleanup main notebook

--- a/gmn_data_analysis_template.ipynb
+++ b/gmn_data_analysis_template.ipynb
@@ -26,7 +26,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Setup code\n",
+        "# Setup\n",
         "!pip install --user gmn-python-api==0.0.4 &> /dev/null && echo \"Installed gmn-python-api.\"\n",
         "!pip install --user git+https://github.com/wmpg/WesternMeteorPyLib &> /dev/null && echo \"Installed wmpl.\"\n",
         "!apt install proj-bin libproj-dev libgeos-dev &> /dev/null && echo \"Installed apt dependencies.\"\n",
@@ -39,7 +39,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6d73a19c-95d5-4dde-b7b6-b3e1c0f83fa7"
+        "outputId": "177d6e78-6106-4017-d251-c69f1f7c2657"
       },
       "execution_count": null,
       "outputs": [
@@ -50,7 +50,9 @@
             "Installed gmn-python-api.\n",
             "Installed wmpl.\n",
             "Installed apt dependencies.\n",
-            "Installed new requests library.\n"
+            "Installed new requests library.\n",
+            "\n",
+            "Setup complete. Restarting runtime (ignore the crash report), please run the cell below next.\n"
           ]
         }
       ]
@@ -60,7 +62,7 @@
       "source": [
         "---\n",
         "\n",
-        "## Load trajectory summary data into Pandas using gmn-python-api"
+        "## Load meteor/trajectory summary data into Pandas using gmn-python-api"
       ],
       "metadata": {
         "id": "QIkfiaJ6apoG"
@@ -71,53 +73,55 @@
       "source": [
         "# Imports\n",
         "from datetime import datetime\n",
-        "from gmn_python_api import get_daily_file_content_by_date\n",
-        "from gmn_python_api import read_trajectory_summary_as_dataframe"
+        "from gmn_python_api.data_directory import get_daily_file_content_by_date\n",
+        "from gmn_python_api.trajectory_summary_reader import read_trajectory_summary_as_dataframe"
       ],
       "metadata": {
-        "id": "svgImznNa947"
+        "id": "0RwlzZ9aq-Qm"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Load the contents of a specific daily trajectory summary file into a Pandas DataFrame\n",
+        "# Load into Pandas\n",
         "trajectory_summary_file_content = get_daily_file_content_by_date(datetime(2019, 7, 24))\n",
-        "trajectory_summary_dataframe = read_trajectory_summary_as_dataframe(trajectory_summary_file_content)"
+        "trajectory_summary_dataframe = read_trajectory_summary_as_dataframe(\n",
+        "    trajectory_summary_file_content,\n",
+        ")"
       ],
       "metadata": {
-        "id": "h0z_hqMZNR_n"
+        "id": "hNSzSGIErAK3"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "For the 24th of July 2019, the following data was recorded by the GMN:\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "ByEfhYutNiCT"
-      }
     },
     {
       "cell_type": "code",
       "source": [
-        "print(f\"{trajectory_summary_dataframe['Vgeo (km/s)'].max()} km/s was the fastest geostationary velocity out of all meteors for that day.\")\n",
-        "print(f\"{trajectory_summary_dataframe.loc[trajectory_summary_dataframe['IAU (code)'] == 'PER'].shape[0]} meteors were estimated to be part of the Perseids shower.\")\n",
-        "print(f\"Station #{trajectory_summary_dataframe['Num (stat)'].mode().values[0]} recorded the highest number of meteors.\")"
+        "# The following data was recorded for the 24th of July 2019\n",
+        "\n",
+        "print(f\"{trajectory_summary_dataframe['Vgeo (km/s)'].max()} km/s \"\n",
+        "       \"was the fastest geostationary velocity out of all meteors for that day.\")\n",
+        "# 65.38499 km/s was the fastest geostationary velocity out of all meteors (24th of July 2019).\n",
+        "\n",
+        "print(f\"{trajectory_summary_dataframe.loc[trajectory_summary_dataframe['IAU (code)'] == 'PER'].shape[0]} \"\n",
+        "       \"meteors were estimated to be part of the Perseids shower.\")\n",
+        "# 8 meteors were estimated to be part of the Perseids shower (24th of July 2019).\n",
+        "\n",
+        "print(f\"Station {trajectory_summary_dataframe['Num (stat)'].mode().values[0]} \"\n",
+        "       \"recorded the highest number of meteors.\")\n",
+        "# Station 2 recorded the highest number of meteors (24th of July 2019)."
       ],
       "metadata": {
-        "id": "FCadWA7vWwfr",
+        "id": "svgImznNa947",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af3bc92d-5833-49d0-e0ae-adcfc1a6b028"
+        "outputId": "ec99c8de-066a-4b36-dbbf-6eebd0167a77"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +129,7 @@
           "text": [
             "65.38499 km/s was the fastest geostationary velocity out of all meteors for that day.\n",
             "8 meteors were estimated to be part of the Perseids shower.\n",
-            "Station #2 recorded the highest number of meteors.\n"
+            "Station 2 recorded the highest number of meteors.\n"
           ]
         }
       ]
@@ -169,9 +173,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 493
         },
-        "outputId": "67461192-34c4-4ad1-b9df-615971d26f65"
+        "outputId": "2011340b-6ee9-4d17-e182-74aa901f5c07"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,11 +188,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f6d07d71c90>"
+              "<matplotlib.collections.PathCollection at 0x7feddaa0e4d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 13
         },
         {
           "output_type": "display_data",
