Pin wmpl version

--- a/gmn_data_analysis_template.ipynb
+++ b/gmn_data_analysis_template.ipynb
@@ -28,7 +28,7 @@
       "source": [
         "# Setup\n",
         "!pip install --user gmn-python-api==0.0.5 &> /dev/null && echo \"Installed gmn-python-api.\"\n",
-        "!pip install --user git+https://github.com/wmpg/WesternMeteorPyLib &> /dev/null && echo \"Installed wmpl.\"\n",
+        "!pip install --user git+http://github.com/wmpg/WesternMeteorPyLib.git@74aba1320ba9281579b816a9fceb9d7463ef1bbd &> /dev/null && echo \"Installed wmpl.\"\n",
         "!apt install proj-bin libproj-dev libgeos-dev &> /dev/null && echo \"Installed apt dependencies.\"\n",
         "!pip install --user --upgrade \"basemap == 1.3.0b1\" \"basemap-data == 1.3.0b1\" \"jplephem\" &> /dev/null && echo \"Installed new requests library.\"\n",
         "!echo && echo \"Setup complete. Restarting runtime (ignore the crash report), please run the cell below next.\"\n",
@@ -104,9 +104,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "579f536f-bac6-4902-ebfd-d09d55ceeb7e"
+        "outputId": "cbe0ec32-350c-43ac-ca05-2133408159be"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,9 +158,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 493
         },
-        "outputId": "42085d63-9bfc-43df-a8e0-60acbe997b3b"
+        "outputId": "a28bf754-c229-4e8d-d2d2-feac42bed276"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,11 +173,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7fbe91843b90>"
+              "<matplotlib.collections.PathCollection at 0x7ff698263c10>"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
