--- a/gmn_data_analysis_template_dev.ipynb
+++ b/gmn_data_analysis_template_dev.ipynb
@@ -41,7 +41,7 @@
       "source": [
         "---\n",
         "\n",
-        "## Load meteor/trajectory summary data into Pandas using gmn-python-api"
+        "## Load meteor trajectory summary data into Pandas using gmn-python-api"
       ],
       "metadata": {
         "id": "QIkfiaJ6apoG"
@@ -55,58 +55,69 @@
         "from gmn_python_api import get_daily_file_content_by_date\n",
         "from gmn_python_api import read_meteor_summary_csv_as_dataframe\n",
         "from gmn_python_api import get_meteor_summary_data_reader_compatible\n",
-        "import gmn_python_api.gmn_data_store_rest_api\n",
-        "gmn_python_api.gmn_data_store_rest_api.QUERY_URL = \"http://0.0.0.0:8001/gmn_data_store{table}.{data_format}?_shape={data_shape}\""
+        "import gmn_python_api.gmn_rest_api\n",
+        "gmn_python_api.gmn_rest_api.QUERY_URL = \"http://0.0.0.0:8001/gmn_data_store{table}.{data_format}?_shape={data_shape}\"  # The GMN REST API isn't live yet so connect locally"
       ],
       "metadata": {
         "id": "svgImznNa947"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import dtale\n",
-        "import dtale.app as dtale_app"
-      ],
-      "metadata": {
-        "id": "LKaW6Yvd7LPF"
-      },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# REST API load test\n",
-        "meteor_summary_file_content_rest_api = get_meteor_summary_data_reader_compatible(where=\"beginning_utc_time__date=2019-07-24\")[0]\n",
-        "meteor_summary_dataframe_rest_api = read_meteor_summary_csv_as_dataframe(meteor_summary_file_content_rest_api, csv_data_directory_format=False)\n",
-        "print(f\"{meteor_summary_dataframe_rest_api['Vgeo (km/s)'].max()} km/s was the fastest geostationary velocity out of all meteors for that day.\")\n",
-        "print(f\"{meteor_summary_dataframe_rest_api.loc[meteor_summary_dataframe_rest_api['IAU (code)'] == 'PER'].shape[0]} meteors were estimated to be part of the Perseids shower.\")\n",
-        "print(f\"Station #{meteor_summary_dataframe_rest_api['Num (stat)'].mode().values[0]} recorded the highest number of meteors.\")"
+        "meteor_summary_file_content_rest_api_1 = get_meteor_summary_data_reader_compatible(\n",
+        "    where_sql=\"date(beginning_utc_time)='2019-07-25'\")[0]\n",
+        "meteor_summary_file_content_rest_api_2 = get_meteor_summary_data_reader_compatible(\n",
+        "    where_sql=\"date(beginning_utc_time)='2019-07-26'\")[0]\n",
+        "\n",
+        "meteor_summary_dataframe_rest_api = read_meteor_summary_csv_as_dataframe(\n",
+        "    [meteor_summary_file_content_rest_api_1, meteor_summary_file_content_rest_api_2],\n",
+        "    csv_data_directory_format=False\n",
+        ")"
       ],
       "metadata": {
-        "id": "xxx7ymdq0x6O"
+        "id": "d37vYfJqIfKQ"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Data directory load test\n",
-        "trajectory_summary_file_content_data_directory = get_daily_file_content_by_date(datetime(2019, 7, 24))\n",
-        "trajectory_summary_dataframe_data_directory = read_meteor_summary_csv_as_dataframe(trajectory_summary_file_content_data_directory, csv_data_directory_format=True)\n",
-        "print(f\"{trajectory_summary_dataframe_data_directory['Vgeo (km/s)'].max()} km/s was the fastest geostationary velocity out of all meteors for that day.\")\n",
-        "print(f\"{trajectory_summary_dataframe_data_directory.loc[trajectory_summary_dataframe_data_directory['IAU (code)'] == 'PER'].shape[0]} meteors were estimated to be part of the Perseids shower.\")\n",
-        "print(f\"Station #{trajectory_summary_dataframe_data_directory['Num (stat)'].mode().values[0]} recorded the highest number of meteors.\")"
+        "print(f\"{meteor_summary_dataframe_rest_api['Vgeo (km/s)'].max()} km/s \"\n",
+        "       \"was the fastest geostationary velocity out of recorded meteors for the 24th and 25th.\")\n",
+        "# 70.88645 km/s was the fastest geostationary velocity out of recorded meteors for the 24th and 25th.\n",
+        "\n",
+        "print(f\"{meteor_summary_dataframe_rest_api.loc[meteor_summary_dataframe_rest_api['IAU (code)'] == 'PER'].shape[0]} \"\n",
+        "       \"meteors were estimated to be part of the Perseids shower.\")\n",
+        "# 8 meteors were estimated to be part of the Perseids shower.\n",
+        "\n",
+        "print(f\"Station {meteor_summary_dataframe_rest_api['Num (stat)'].mode().values[0]} \"\n",
+        "       \"recorded the highest number of meteors.\")\n",
+        "# Station 2 recorded the highest number of meteor."
       ],
       "metadata": {
-        "id": "h0z_hqMZNR_n"
+        "id": "xxx7ymdq0x6O",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "110c91e5-e35c-4b0a-bf76-1cfda8bfd65c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "66.54542 km/s was the fastest geostationary velocity out of recorded meteors for the 24th and 25th.\n",
+            "4 meteors were estimated to be part of the Perseids shower.\n",
+            "Station 2 recorded the highest number of meteors.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -165,8 +176,6 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -U dtale\n",
-        "\n",
         "import pandas as pd\n",
         "\n",
         "import dtale\n",
