Install d-tale at beginning of notebook

--- a/gmn_data_analysis_template.ipynb
+++ b/gmn_data_analysis_template.ipynb
@@ -29,6 +29,7 @@
         "# Setup\n",
         "!pip install --user gmn-python-api==0.0.6 &> /dev/null && echo \"Installed gmn-python-api.\"\n",
         "!pip install --user git+http://github.com/wmpg/WesternMeteorPyLib.git@74aba1320ba9281579b816a9fceb9d7463ef1bbd &> /dev/null && echo \"Installed wmpl.\"\n",
+        "!pip install --user \"dtale==1.61.1\" &> /dev/null && echo \"Installed D-Tale.\"\n",
         "!apt install proj-bin libproj-dev libgeos-dev &> /dev/null && echo \"Installed apt dependencies.\"\n",
         "!pip install --user --upgrade \"basemap == 1.3.0b1\" \"basemap-data == 1.3.0b1\" \"jplephem\" &> /dev/null && echo \"Installed new requests library.\"\n",
         "!echo && echo \"Setup complete. Restarting runtime (ignore the crash report), please run the cell below next.\"\n",
@@ -36,7 +37,7 @@
       ],
       "metadata": {
         "id": "FocEOHdmqaCf",
-        "outputId": "5e19fa57-1593-44d3-c2d3-180435dadfb0",
+        "outputId": "93d5e058-7b76-4cfb-d77b-601a89fada91",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -49,6 +50,7 @@
           "text": [
             "Installed gmn-python-api.\n",
             "Installed wmpl.\n",
+            "Installed D-Tale.\n",
             "Installed apt dependencies.\n",
             "Installed new requests library.\n",
             "\n",
@@ -89,32 +91,41 @@
         "trajectory_summary_dataframe = read_meteor_summary_csv_as_dataframe(\n",
         "    get_all_file_content(),\n",
         "    csv_data_directory_format=True,\n",
-        ")\n",
-        "\n",
-        "# The following data was recorded for the 24th and 25th of July 2019\n",
-        "trajectory_summary_dataframe = trajectory_summary_dataframe.loc[\n",
-        "    (trajectory_summary_dataframe[\"Beginning (UTC Time)\"] >= \"2019-07-24\")\n",
-        "    & (trajectory_summary_dataframe[\"Beginning (UTC Time)\"] <= \"2019-07-25\")\n",
-        "]"
+        ")"
       ],
       "metadata": {
         "id": "hNSzSGIErAK3"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(f\"{trajectory_summary_dataframe['Vgeo (km/s)'].max()} km/s \"\n",
+        "# The following data was recorded for the 24th and 25th of July 2019\n",
+        "trajectory_summary_dataframe_extracted = trajectory_summary_dataframe.loc[\n",
+        "    (trajectory_summary_dataframe[\"Beginning (UTC Time)\"] >= \"2019-07-25\")\n",
+        "    & (trajectory_summary_dataframe[\"Beginning (UTC Time)\"] <= \"2019-07-26\")\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "I50aPViJHdyk"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"{trajectory_summary_dataframe_extracted['Vgeo (km/s)'].max()} km/s \"\n",
         "       \"was the fastest geostationary velocity out of recorded meteors for the 24th and 25th.\")\n",
         "# 70.88645 km/s was the fastest geostationary velocity out of recorded meteors for the 24th and 25th.\n",
         "\n",
-        "print(f\"{trajectory_summary_dataframe.loc[trajectory_summary_dataframe['IAU (code)'] == 'PER'].shape[0]} \"\n",
+        "print(f\"{trajectory_summary_dataframe_extracted.loc[trajectory_summary_dataframe_extracted['IAU (code)'] == 'PER'].shape[0]} \"\n",
         "       \"meteors were estimated to be part of the Perseids shower.\")\n",
         "# 8 meteors were estimated to be part of the Perseids shower.\n",
         "\n",
-        "print(f\"Station {trajectory_summary_dataframe['Num (stat)'].mode().values[0]} \"\n",
+        "print(f\"Station {trajectory_summary_dataframe_extracted['Num (stat)'].mode().values[0]} \"\n",
         "       \"recorded the highest number of meteors.\")\n",
         "# Station 2 recorded the highest number of meteor."
       ],
@@ -123,16 +134,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ef439b1e-0b68-4b4c-a221-70c4df60c6e3"
+        "outputId": "eba54584-34cb-4dfc-9e6f-d9a6136a7d2c"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "70.88645 km/s was the fastest geostationary velocity out of recorded meteors for the 24th and 25th.\n",
-            "10 meteors were estimated to be part of the Perseids shower.\n",
+            "65.38499 km/s was the fastest geostationary velocity out of recorded meteors for the 24th and 25th.\n",
+            "4 meteors were estimated to be part of the Perseids shower.\n",
             "Station 2 recorded the highest number of meteors.\n"
           ]
         }
@@ -179,7 +190,7 @@
         },
         "outputId": "414e056b-1849-4bdd-96fc-2e37814f8de0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,17 +232,6 @@
       "metadata": {
         "id": "HI7pQ0aFZg3g"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install --user \"dtale==1.61.1\" &> /dev/null && echo \"Installed D-Tale.\""
-      ],
-      "metadata": {
-        "id": "NWMSF1PuYqOe"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
